--- a/.github/workflows/master_cippw3sxc.yml
+++ b/.github/workflows/master_cippw3sxc.yml
@@ -6,7 +6,7 @@ name: Build and deploy Powershell project to Azure Function App - cippw3sxc
 on:
   push:
     branches:
-      - master
+      - interface-rewrite
   workflow_dispatch:
 
 env:
